[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memochat"
version = "0.1.0"
description = "Local AI Memory Routing System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
memochat = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memochat*"]
